@@ -22,6 +22,7 @@
   * Tweaked ore highlighting to be more noticeable
   * Tweaked coloring for vines, stems, tall grass, and lilypads
   * (internal) Use log4j for file logging and console error reporting
+  * "Y" will bring up a window with a keyboard reference
 
 Minecraft X-Ray 3.3.3 (2011.09.23)
 
